<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rlayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/bgColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/bgColor"
        android:orientation="vertical"
        android:padding="@dimen/register_margin_padding">

        <androidx.viewpager.widget.ViewPager
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="48dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_activity_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_white"
                android:drawableStart="@drawable/ic_person_pin_black_24dp"
                android:drawablePadding="@dimen/margin_draweble_padding"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_activity_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_white"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="@dimen/margin_draweble_padding"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_login_text_top"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_activity_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background_white"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="@dimen/margin_draweble_padding"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_login_text_top"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/re_register_activity_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background_white"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="@dimen/margin_draweble_padding"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_draweble_padding"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/register_btn_text"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/registration_activity_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_login_button_top"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_account_login_here"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>