<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
  >

    <data>

        <variable
            name="UserViewModel"
            type="com.diren.locationbasedweatherforecast.viewmodel.UserViewModel" />

    </data>

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_login"
    android:background="?attr/bgColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login_top"
        android:background="?attr/bgColor"
        android:padding="@dimen/margin_login"
        android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_activity_email_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding"
        android:layout_marginEnd="@dimen/margin_padding"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_activity_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@={UserViewModel.EmailAdress}"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="@dimen/margin_draweble_padding"
            android:textSize="16sp"
            android:background="@drawable/button_background_white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_activity_password_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding"
        android:layout_marginEnd="@dimen/margin_padding"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_activity_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:text="@={UserViewModel.password}"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="@dimen/margin_draweble_padding"
            android:maxLength="20"
            android:textSize="16sp"
            android:background="@drawable/button_background_white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login_button_top"
        android:textSize="14sp"
        android:onClick="@{(v)-> UserViewModel.onClick(v)}"
        android:text="@string/login_btn_text"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorAccent"/>

    <TextView
        android:id="@+id/login_activity_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="@{(v)->UserViewModel.onClickListener(v)}"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="@dimen/margin_login_button_top"
        android:textSize="14sp"
        android:textColor="@color/lightgray"
        android:text="@string/login_account_register_here" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>
</layout>